<?xml version="1.0"?>
<package format="2">
  <name>orbiterros</name>
  <version>0.0.0</version>
  <description>The orbiterros package for intercation with orbiterros plugin in Orbiter 2016</description>

  <maintainer email="standmit@zabstrannik.ru">Andrey Stepanov</maintainer>


  <license>GPLv3</license>


  <author email="standmit@zabstrannik.ru">Andrey Stepanov</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>


  <export />
</package>
